Tue Sep 04 17:15:30 BST 2007  Olly Betts <olly@survex.com>

	* docs/overview.html: Fix typo.

Tue Sep 04 13:47:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/api_anydb.cc: Tighten test_checkatleast3 to check for
	  previous bug (now fixed).

Tue Sep 04 13:37:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* matcher/multimatch.cc: If check_at_least is greater than
	  maxitems, but there are fewer results than check_at_least, the
	  lower and upper bounds reported should be equal (and exact).  Fix
	  a bug which caused this not to be the case, by checking if
	  docs_matched < check_at_least, and forcing the bounds (and
	  estimate) to be docs_matched in this case.

	  Also, fix a bug when sorting by anything other than relevance,
	  which was causing potential matches which are too low in the
	  ranking to make the mset not to be added to the count of
	  docs_matched, even when docs_matched < check_at_least.
	
	  Also, add a few extra explanatory comments and debug log messages
	  in get_mset().

Tue Sep 04 12:43:03 BST 2007  Olly Betts <olly@survex.com>

	* PLATFORMS: Update from debian buildd logs.

Tue Sep 04 09:57:25 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* Makefile.am,configure.ac,msvc/genversion.pl,msvc/version.h.in:
	  Move msvc/genversion.pl and msvc/version.h.in to win32msvc in
	  xapian-maintainer-tools.  Remove generation of msvc/version.h
	  from configure.in, and AC_SUBST() of MAJOR_VERSION,
	  MINOR_VERSION and REVISION, which were only in place for this
	  generation.  Remove msvc/version.h from distribution tarballs.

Tue Sep 04 02:56:00 BST 2007  Olly Betts <olly@survex.com>

	* matcher/andpostlist.cc: If the database has > 2G documents then the
	  sum of termfreq_min can overflow, so handle this case correctly.

Tue Sep 04 00:05:47 BST 2007  Olly Betts <olly@survex.com>

	* xapian-config.in: We always need to include dependency_libs in the