@@ -1,3 +1,9 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
+<TITLE>Xapian: Overview</TITLE>
+</HEAD>
+<BODY BGCOLOR="white" TEXT="black">
 
 <H1>Overview</H1>
 
