@@ -1,3 +1,8 @@
+Tue Sep 04 17:21:49 BST 2007  Olly Betts <olly@survex.com>
+
+	* docs/overview.html: Restore the HTML header I accidentally deleted
+	  in November 2006.
+
 Tue Sep 04 17:15:30 BST 2007  Olly Betts <olly@survex.com>
 
 	* docs/overview.html: Fix typo.
